chat: fix whitespace for RTL messages with links

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -2029,7 +2029,7 @@ OM = _omsg
                 a.selectable-text[href],
                 /// Embedded links are special snowflakes, too.
                 .eRacY[dir = 'ltr'] > [dir = 'ltr'] {
-                    &::before { content: unset i }
+                    &::before, &::after { content: unset i }
                 }
             }
         }
